--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dev": "rollup -c -w"
   },
   "dependencies": {
+    "animejs": "^3.2.1",
     "lectorjs": "latest",
     "mousetrap": "^1.6.5",
     "pragmajs": "^0.7.1"
