--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "name": "lector-pdfjs",
+  "version": "0.1.0",
+  "description": "Read pdfs like you're on aderall",
+	"license": "CC",
+ 	"repository": "robo-monk/lector-pdfjs",
+
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -38,7 +43,7 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
-    "lectorjs": "latest",
+    "lectorjs": "0.4.3",
     "mousetrap": "^1.6.5",
     "pragmajs": "^0.7.1"
   }
