--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "lector-pdfjs",
   "version": "0.1.0",
   "description": "Read pdfs like you're on aderall",
-	"license": "CC",
+	"license": "CC0",
  	"repository": "robo-monk/lector-pdfjs",
 
   "devDependencies": {
