--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "lector-pdfjs",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Read pdfs like you're on aderall",
-	"license": "CC0",
- 	"repository": "robo-monk/lector-pdfjs",
+  "license": "CC0",
+  "repository": "robo-monk/lector-pdfjs",
   "directories": {
     "doc": "docs",
     "test": "test"
   },
-
   "devDependencies": {
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
@@ -17,6 +16,7 @@
     "nodemon": "^2.0.7",
     "rollup": "^2.41.0",
     "rollup-plugin-execute": "^1.1.1",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-sizes": "^1.0.3",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-visualizer": "^4.2.0",
