--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lector-pdfjs",
-  "version": "0.3.0",
+  "version": "0.3.2",
   "description": "Read pdfs like you're on aderall",
   "license": "CC0",
   "repository": "robo-monk/lector-pdfjs",
@@ -47,6 +47,8 @@
   },
   "dependencies": {
     "animejs": "^3.2.1",
+    "canvas": "^2.7.0",
+    "lector": "latest",
     "lectorjs": "0.4.3",
     "mousetrap": "^1.6.5",
     "pragmajs": "^0.7.1"
