--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "lector-pdfjs",
-    "version": "0.4.0",
+    "version": "0.4.1",
     "description": "Read pdfs like you're on aderall",
     "license": "CC0",
     "repository": "robo-monk/lector-pdfjs",
@@ -46,7 +46,7 @@
     },
     "dependencies": {
         "animejs": "^3.2.1",
-        "lectorjs": "latest",
+        "lectorjs": "^0.5.5",
         "mousetrap": "^1.6.5",
         "pragmajs": "^0.7.1"
     },
