--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "dev": "nodemon -w 'src/' -e css,scss,js --exec python3 watchtower"
     },
     "dependencies": {
-        "lectorjs": "^0.9.5"
+        "lectorjs": "^0.9.5",
+        "pragma-thread": "^0.0.4"
     }
 }
