--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@rollup/plugin-commonjs": "^17.0.0",
         "@rollup/plugin-json": "^4.1.0",
         "@rollup/plugin-node-resolve": "^11.0.1",
+        "@rollup/plugin-strip": "^2.0.1",
         "eslint": "^7.22.0",
         "nodemon": "^2.0.7",
         "rollup": "^2.41.0",
